refactor(sms): tighten regression assertions and simplify reviewed code
Signed-off-by: Michael Yingbull <michael@maplecreekmedical.ca>